--- a/index.html
+++ b/index.html
@@ -80,10 +80,14 @@
       <summary>Slot Guide</summary>
       <div id="slotGuide"></div>
     </details>
-    <details>
-      <summary>Word Banks</summary>
-      <div id="wordBanks"></div>
-    </details>
+ <details>
+  <summary>Slot Guide</summary>
+  <div id="slotGuide"></div>
+</details>
+<details>
+  <summary>Word Banks</summary>
+  <div id="wordBanks"></div>
+</details>
   </div>
   <script src="wordbank.js"></script>
   <script src="app.js"></script>
